Fixed margin on mobile screens

--- a/css/layout.css
+++ b/css/layout.css
@@ -57,7 +57,7 @@
 }
 
 .one-fifth {
-  width: 40%;
+  width: 50%;
 }
 
 .mini-pokemon-title {
